# Rexxtracer

./: CMakeLists.txt  README.md  Rexxtracer.slnx  imgui.ini
Rexxtracer/: Rexxtracer.vcxproj
Rexxtracer/src/: main.cpp
src/: CMakeLists.txt  main.cpp
src/Core/: Base.h  CMakeLists.txt  DataBuffer.cpp  DataBuffer.h  Log.h  Window.cpp  Window.h
src/Event/: Event.h  EventHandler.h
src/Renderer/: CMakeLists.txt  RendererContext.cpp  RendererContext.h
src/Scene/: CMakeLists.txt
src/UI/: CMakeLists.txt  UIContext.cpp  UIContext.h
